--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer_text">Desarrollado por Ignacio Majo</footer>
+    <footer class="footer_text">Desarrollado por Ignacio Majo | Oracle Next Education G8</footer>
     <script src="app.js" defer></script>
 </body>
 </html>
